// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogCard should render BlogCard component with default props 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderBottomLeftRadius": 8,
      "borderBottomRightRadius": 8,
      "borderTopLeftRadius": 8,
      "borderTopRightRadius": 8,
      "elevation": 16,
      "paddingBottom": 20,
      "paddingLeft": 20,
      "paddingRight": 20,
      "paddingTop": 20,
      "shadowColor": "$boxShadowSecondary",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 20,
        "marginBottom": 20,
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://i.ibb.co/m8nVWx2/sarah-dorweiler-fr0-J5-GIVyg-unsplash-1.png",
        }
      }
      style={
        {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 70,
          "width": 70,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "gap": 6,
        }
      }
    >
      <Text
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          {
            "color": "#606060",
            "fontFamily": "NunitoSans_7pt-Medium",
            "fontSize": 16,
            "lineHeight": 20,
          }
        }
        suppressHighlighting={true}
      >
        Product 01
      </Text>
      <Text
        allowFontScaling={false}
        style={
          {
            "color": "#242424",
            "fontFamily": "NunitoSans, Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": "bold",
            "lineHeight": 20,
          }
        }
        suppressHighlighting={true}
      >
        30.00
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <View
      style={
        {
          "rowGap": 5,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <Text
      allowFontScaling={false}
      style={
        {
          "color": "#808080",
          "fontFamily": "NunitoSans_7pt-Medium",
          "fontSize": 12,
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      20/03/2020
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    ellipsizeMode="tail"
    numberOfLines={5}
    style={
      {
        "color": "#242424",
        "fontFamily": "NunitoSans_7pt-Medium",
        "fontSize": 14,
        "lineHeight": 20,
        "textAlign": "justify",
      }
    }
    suppressHighlighting={true}
  >
    Nice Furniture with good delivery.Nice Furniture with good delivery. The delivery time is very fast. Then products look like exactly the picture in the app. Besides, color is also the same and quality is very good despite very cheap price
  </Text>
</View>
`;

exports[`BlogCard should render CartItem component with isReview true 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderBottomLeftRadius": 8,
      "borderBottomRightRadius": 8,
      "borderTopLeftRadius": 8,
      "borderTopRightRadius": 8,
      "elevation": 16,
      "paddingBottom": 20,
      "paddingLeft": 20,
      "paddingRight": 20,
      "paddingTop": 20,
      "shadowColor": "$boxShadowSecondary",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 4,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://i.ibb.co/m8nVWx2/sarah-dorweiler-fr0-J5-GIVyg-unsplash-1.png",
      }
    }
    style={
      {
        "alignSelf": "center",
        "borderBottomLeftRadius": 9999,
        "borderBottomRightRadius": 9999,
        "borderTopLeftRadius": 9999,
        "borderTopRightRadius": 9999,
        "height": 40,
        "position": "absolute",
        "top": -20,
        "width": 40,
      }
    }
  />
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <View
      style={
        {
          "rowGap": 5,
        }
      }
    >
      <Text
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          {
            "color": "#242424",
            "fontFamily": "NunitoSans_7pt-Medium",
            "fontSize": 14,
            "lineHeight": 20,
          }
        }
        suppressHighlighting={true}
      >
        Product 01
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="16"
          bbWidth="16"
          fill="none"
          focusable={false}
          height="16"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width="16"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0.5,
                    -865972,
                    0.5,
                    -865972,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="a"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M20.388 10.918L32 12.118l-8.735 7.749L25.914 31.4l-9.893-6.088L6.127 31.4l2.695-11.533L0 12.118l11.547-1.2L16.026.6l4.362 10.318z"
              fill={
                {
                  "brushRef": "a",
                  "type": 1,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <Text
      allowFontScaling={false}
      style={
        {
          "color": "#808080",
          "fontFamily": "NunitoSans_7pt-Medium",
          "fontSize": 12,
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      20/03/2020
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    ellipsizeMode="tail"
    numberOfLines={5}
    style={
      {
        "color": "#242424",
        "fontFamily": "NunitoSans_7pt-Medium",
        "fontSize": 14,
        "lineHeight": 20,
        "textAlign": "justify",
      }
    }
    suppressHighlighting={true}
  >
    Nice Furniture with good delivery.Nice Furniture with good delivery. The delivery time is very fast. Then products look like exactly the picture in the app. Besides, color is also the same and quality is very good despite very cheap price
  </Text>
</View>
`;
